--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,12 @@
 # Checks to see if the user is attempting to access a valid file,
 # such as an image or css document, if this isn’t true it sends the
 # request to index.php
+
 RewriteEngine on
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [L]
+
+#allow default https on website
+#RewriteCond %{HTTPS} off
+#RewriteRule ^.*$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
